# another-one-delivery

./: .gitignore  Makefile  docker-compose-local.yaml  docker-compose.yaml
.github/workflows/: base-prepare-docker.yaml  catalog.yaml  user-manager.yaml
catalog/: go.mod  main.go
catalog/deploy/: Dockerfile
user-manager/: Makefile  main.py  manage.py  pyproject.toml
user-manager/app/: main.py
user-manager/app/api/: tecnical.py
user-manager/app/api/routers/: tecnical.py
user-manager/app/api/v1/: router.py  users.py
user-manager/app/api/v1/users/: users.py
user-manager/deploy/: Dockerfile
