[tool.poetry]
name = "user-manager"
version = "0.1.0"
description = "Сервис, обрабатывающий пользователей"
authors = ["matiiv <matiiv.r.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
