[tool.poetry]
name = "user-manager"
version = "0.1.0"
description = "Сервис, обрабатывающий пользователей"
authors = ["matiiv <matiiv.r.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
typer = "^0.9.0"
ruff = "^0.1.14"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 115
target-version = "py310"
select = [
    "F", "E", "W", "C90", "UP",
    "N", "YTT", "S", "BLE", "FBT",
    "B", "A", "C4", "T20", "Q",
    "RET", "SIM", "ARG", "ERA",
    "PGH", "RUF", "I"
]
show-source = true
ignore = ["RUF003"]
